# bitset

./: bitset.cabal
src/Data/BitSet/: Generic.hs  Word.hs
