cabal-version:        3.4
Name:                 bitset
version:              1.0
Synopsis:             A space-efficient set data structure.
Description:
  A /bit set/ is a compact data structure, which maintains a set of members
  from a type that can be enumerated (i. e. has an `Enum' instance).
Category:             Data Structures
License:              MIT
License-file:         LICENSE
Data-files:           CHANGES
Author:               Sergei Lebedev <superbobry@gmail.com>
                    , Aleksey Kladov <aleksey.kladov@gmail.com>
                    , Fedor Gogolev <knsd@knsd.net>
Maintainer:           superbobry@gmail.com
Bug-reports:          http://github.com/lambda-llama/bitset/issues
Stability:            Experimental

Source-repository head
  Type:     git
  Location: https://github.com/lambda-llama/bitset

Library
  Hs-source-dirs:     src
  Ghc-options:        -Wall -fno-warn-orphans
  Default-language:   Haskell2010
  default-extensions:   CPP, NamedFieldPuns, MagicHash, UnboxedTuples,
                       BangPatterns, ForeignFunctionInterface,
                       GHCForeignImportPrim, MagicHash,
                       UnliftedFFITypes, UnboxedTuples,
                       GeneralizedNewtypeDeriving, TypeFamilies,
                       DeriveDataTypeable

  if os(windows)
    Extra-libraries:  gmp-10
  else
    Extra-libraries:  gmp

  Build-depends:      base
                    , deepseq

  Exposed-modules:  Data.BitSet.Generic
                    , Data.BitSet.Word

Test-suite bitset-tests
  Hs-source-dirs:     tests
  Ghc-options:        -Wall -O2 -fno-warn-orphans
  Default-language:   Haskell2010
  Other-extensions:   CPP

  Type:               exitcode-stdio-1.0
  Main-is:            Tests.hs

  Build-depends:      base
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
                    , bitset
